--- a/app/html/following.html
+++ b/app/html/following.html
@@ -2,5 +2,8 @@
   <h2>Following</h2>
   <li data-ng-repeat="following in flwngCtrl.followingData">
     {{following}}
+    <p>{{following.login}}</p>
+    <img src="{{following.avatar_url}}" alt="avatar" />
+    <p>URL: <a href="{{following.url}}">{{following.url}}</a></p>
   </li>
 </div>
