now that I've exceeded the GH use limit for the hour, I might as well commit my code

--- a/app/html/follower.html
+++ b/app/html/follower.html
@@ -2,7 +2,7 @@
   <h2>Followers</h2>
   <li data-ng-repeat="follower in flwrCtrl.followerData">
     <p>{{follower.login}}</p>
-    <img src="{{follower.avatar_url}}" alt="avatar" />
+    <img class="flw-avatar" ssrc="{{follower.avatar_url}}" alt="avatar" />
     <p>URL: <a href="{{follower.url}}">{{follower.url}}</a></p>
   </li>
 </div>
