--- a/app/html/following.html
+++ b/app/html/following.html
@@ -1,9 +1,8 @@
 <div data-ng-init="flwngCtrl.getFollowingData()" data-ng-controller="FollowingController as flwngCtrl">
   <h2>Following</h2>
   <li data-ng-repeat="following in flwngCtrl.followingData">
-    {{following}}
     <p>{{following.login}}</p>
-    <img src="{{following.avatar_url}}" alt="avatar" />
+    <img class="flw-avatar" src="{{following.avatar_url}}" alt="avatar" />
     <p>URL: <a href="{{following.url}}">{{following.url}}</a></p>
   </li>
 </div>
