made starred repos show

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <main>
     <section data-ng-init="userCtrl.getUserData()" data-ng-controller="UserController as userCtrl">
       <list-user-info></list-user-info>
+      <list-starred></list-starred>
       <list-followers></list-followers>
       <list-followed></list-followed>
       <list-repos></list-repos>
