--- a/app/html/user.html
+++ b/app/html/user.html
@@ -1,7 +1,1 @@
-<img src="{{userCtrl.avatarUrl}}" alt="avatar" />
-{{userCtrl.starredUrl}}
-{{userCtrl.followers}}
-{{userCtrl.followersUrl}}
-{{userCtrl.following}}
-{{userCtrl.followingUrl}}
-{{userCtrl.reposUrl}}
+<img src="{{userCtrl.avatarUrl}}" alt="avatar" class="avatar" />
