converted all ng-controllers into directives

--- a/app/html/follower.html
+++ b/app/html/follower.html
@@ -1,4 +1,4 @@
-<div data-ng-init="flwrCtrl.getFollowerData()" data-ng-controller="FollowerController as flwrCtrl">
+<div data-ng-init="flwrCtrl.getFollowerData()">
   <h2>Followers</h2>
   <li data-ng-repeat="follower in flwrCtrl.followerData">
     <p>{{follower.login}}</p>
