--- a/app/html/following.html
+++ b/app/html/following.html
@@ -1,4 +1,4 @@
-<div data-ng-init="flwngCtrl.getFollowingData()" data-ng-controller="FollowingController as flwngCtrl">
+<div data-ng-init="flwngCtrl.getFollowingData()">
   <h2>Following</h2>
   <li data-ng-repeat="following in flwngCtrl.followingData">
     <p>{{following.login}}</p>
