--- a/app/index.html
+++ b/app/index.html
@@ -7,13 +7,13 @@
 </head>
 <body data-ng-app="UserApp">
   <main>
-    <section data-ng-init="userCtrl.getUserData()" data-ng-controller="UserController as userCtrl">
-      <list-user-info></list-user-info>
+    <list-user-info></list-user-info>
+    <!-- <section data-ng-init="userCtrl.getUserData()" data-ng-controller="UserController as userCtrl">
       <list-starred></list-starred>
       <list-followers></list-followers>
       <list-followed></list-followed>
       <list-repos></list-repos>
-    </section>
+    </section> -->
   </main>
   <script src="./bundle.js" type="text/javascript"></script>
 </body>
