--- a/app/html/repo.html
+++ b/app/html/repo.html
@@ -1,4 +1,4 @@
-<div data-ng-init="repoCtrl.getRepoData()" data-ng-controller="RepoController as repoCtrl">
+<div data-ng-init="repoCtrl.getRepoData()">
   <h2>Repos</h2>
   <li data-ng-repeat="repo in repoCtrl.repoData">
     <p>
@@ -7,8 +7,6 @@
     <p>Owner: {{repo.owner.login}}</p>
     <p>Description: {{repo.description}}</p>
     <p>URL: <a href="{{repo.url}}">{{repo.url}}</a></p>
-    <p>
-      Last updated: {{repo.updated_at | date}}
-    </p>
+    <p>Last updated: {{repo.updated_at | date}}</p>
   </li>
 </div>
